mus: Make UserActivityDetector not observe PlatformEventSource directly.

ash::Shell's UserActivityForwarder notifies UserActivityDetector in Mus.
Observing PlatformEventSource directly is redundant and causes problems.

Reprocessing native events with adjusted locations breaks double clicks.
This patch prevents UserActivityDetector from reprocessing those events.

Bug: 825695
Change-Id: Iefe4af55eedf8efc7515664b2f0cc46abe273866
Reviewed-on: https://chromium-review.googlesource.com/981492
Commit-Queue: Michael Wasserman <msw@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546037}
Former-commit-id: 10327b48a45b58235298f7cbe6c3b0e72fc7a3eb