ash/shell.cc
@@ -1017,8 +1017,12 @@ void Shell::Init(ui::ContextFactory* context_factory,
   // The order in which event filters are added is significant.
 
   // ui::UserActivityDetector passes events to observers, so let them get
-  // rewritten first.
-  user_activity_detector_.reset(new ui::UserActivityDetector);
+  // rewritten first. The detector observses the platform event source directly
+  // in the Classic configuration, but in Mus and Mash configurations, the
+  // detector instead relies on reports of events from the Window Server.
+  const bool observe_event_source = config == Config::CLASSIC;
+  user_activity_detector_ =
+      std::make_unique<ui::UserActivityDetector>(observe_event_source);
 
   overlay_filter_.reset(new OverlayEventFilter);
   AddPreTargetHandler(overlay_filter_.get());
